--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
-spring.application.name = db
+spring.cloud.config.uri = http://localhost:8888
+management.endpoints.web.exposure.include = *
+
+# DB Information
