--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,15 @@ spring.cloud.config.uri = http://localhost:8888
 management.endpoints.web.exposure.include = *
 
 # DB Information
+#MySQL DB Properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pss-ms
+spring.datasource.username=root
+spring.datasource.password=root
+
+#JPA Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
