--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,9 @@
 spring.cloud.config.uri = http://localhost:8888
 management.endpoints.web.exposure.include = *
 
+# RabbitMQ Server Configuration
+spring.rabbitmq.addresses=amqps://uhtczcsy:AKlEd4Gvb6w7X9wjPHrAjaraji0ZLMZx@puffin.rmq2.cloudamqp.com/uhtczcsy
+
 # DB Information
 #MySQL DB Properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
