--- a/booking-service.properties
+++ b/booking-service.properties
@@ -1,3 +1,3 @@
 server.port = 8083
 coupon.code = COUPNHYD55OFF
-search-service.ribbon.listOfServers = localhost:8082, localhost:9082, localhost:1082, localhost:1182
+eureka.client.serviceUrl.defaultZone:http://localhost:8761/eureka/
