--- a/search-service.properties
+++ b/search-service.properties
@@ -1,2 +1,3 @@
 originairports.shutdown = Delhi
-eureka.client.serviceUrl.defaultZone:http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone:http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
