--- a/fare-service.properties
+++ b/fare-service.properties
@@ -1,3 +1,3 @@
-server.port = 8081
-fares.discount = 15
+server.port:8081
+fares.discount:15
 eureka.client.serviceUrl.defaultZone:http://localhost:8761/eureka/
